# mindpalace

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_skillforge/: MANIFEST.json  README.md
docs/: README.md  agents-and-skills.md  architecture.md  commands.md  configuration.md  gateways.md  getting-started.md  plugins.md
mindpalace/: __init__.py  bots.py  cli.py  config.py  guard.py  identity.py  mcp.py  notify.py  remember.py  scopes.py  setup.py  skills.py  theme.py
mindpalace/agents/: __init__.py  analyst.py  base.py
mindpalace/core/: __init__.py  brain.py  daemon.py  goal.py  heartbeat.py  jobs.py  notify.py  service.py  telemetry.py  updater.py
mindpalace/gateways/: __init__.py  discord.py  terminal.py  whatsapp.py
mindpalace/mcp/ai/: memory.md  sequential-thinking.md
mindpalace/mcp/data/: postgres.md  sqlite.md
mindpalace/mcp/design/: figma.md
mindpalace/mcp/dev/: context7.md  everything.md  filesystem.md  git.md  github.md  postman.md
mindpalace/mcp/devops/: aws-docs.md  cloudflare.md  sentry.md
mindpalace/mcp/payments/: stripe.md
mindpalace/mcp/productivity/: google-drive.md  linear.md  notion.md  slack.md  time.md
mindpalace/mcp/web/: brave-search.md  exa.md  fetch.md  playwright.md  puppeteer.md
mindpalace/memory/: __init__.py  session_store.py  store.py
mindpalace/plugins/: README.md  __init__.py  base.py  loader.py
(+746 files in other folders)
